--- a/03_Lazaro_Vega_Task/styles.css
+++ b/03_Lazaro_Vega_Task/styles.css
@@ -46,11 +46,17 @@ h1 {
   top: -3.5rem;
 }
 
-.nav-aside {
-  display: inline-block;
-  width: 15vw;
-  vertical-align: top;
+main {
   height: 100%;
+  display: flex;
+  min-height: 61.2vh;
+}
+
+.nav-aside {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 20%;
+  vertical-align: top;
   background-color: #334854;
   padding-top: 2rem;
 }
@@ -68,18 +74,20 @@ h1 {
   color: black;
 }
 
-main {
-  height: 22.85rem;
+.main-container {
+  display: flex;
+  flex-basis: 80%;
 }
 
-.main-container {
-  display: inline-block;
-  width: 80vw;
-  padding-top: 2rem;
+.main-container article {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 2em;
+  gap: .5rem;
 }
 
 .main-container div {
-  margin-bottom: .5rem;
   background-color: #e04462;
   border-radius: 1rem;
   padding: .2rem 2rem;
@@ -96,4 +104,76 @@ main {
 
 .main-container a {
   color: #334854;
+}
+
+.contact {
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.rules {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.rules div {
+  background-color: inherit;
+  text-align: center;
+}
+
+.rules span {
+  margin: inherit;
+}
+
+.rules section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 2rem;
+}
+
+.rules p {
+  margin: 0;
+}
+
+.rules ol {
+  padding: 0 1rem;
+}
+
+.rules h2, .rules strong {
+  color: #334854;
+}
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.table-container h1 {
+  text-align: center;
+  color:#334854;
+  font-weight: bold;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+table {
+  padding: 2em .5em;
+  background-color: #f9c535;
+  border-radius: 1rem;
+  margin: 1rem 0;
+}
+
+th {
+  text-align: left;
+}
+
+.table-date {
+  text-align: center;
+}
+
+.table-teams {
+  width: 5em!important;
 }
