--- a/04_Lazaro_Vega_Task/styles.css
+++ b/04_Lazaro_Vega_Task/styles.css
@@ -253,6 +253,7 @@ input[type=radio] {
   background-color: #efecea;
   padding: .5em;
   aspect-ratio: 1/1;
+  appearance: none;
   -webkit-appearance: none;
 }
 
