title in all pages + dynamic in details, "loading" indicator,

--- a/JS-01_Lazaro_Vega_Task/styles.css
+++ b/JS-01_Lazaro_Vega_Task/styles.css
@@ -79,7 +79,7 @@ h1, h2, h3, p {
   box-shadow: -0.5rem 0.5rem 0.5rem 0.1rem rgb(217 3 104 / 50%);
 }
 
-.card a:hover, .card:hover {
+.card a:hover, #card-container .card:hover {
   transition: 0.2s;
   box-shadow: 0rem 0rem 0rem 0rem rgb(217 3 104 / 50%);
 }
@@ -94,7 +94,7 @@ h1, h2, h3, p {
 }
 
 .card:hover {
-  border: 1px solid var(--primary);
+  border: 5px solid var(--primary);
 }
 
 .card-img-top {
@@ -112,9 +112,11 @@ h1, h2, h3, p {
   color: var(--primary);
 }
 
-/* #details img {
-  box-shadow: -0.5rem -0.5rem 3rem .5rem rgb(217 3 104 / 50%);
-} */
+#details img {
+  min-width: 100%;
+  object-fit: cover;
+  aspect-ratio: 2/1;
+}
 
 @media (max-width : 786px) {
   header nav {
