--- a/JS-01_Lazaro_Vega_Task/styles.css
+++ b/JS-01_Lazaro_Vega_Task/styles.css
@@ -9,16 +9,24 @@
   --background-light: #ffffff;
   --background-dark: #333333;
 }
-
-body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   min-height: 100vh;
   font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, p {
   margin: 0;
+}
+
+.spinner-border:not(table .spinner-border) {
+  width: 4em;
+  height: 4em;
 }
 
 .bg-white {
