card, navbar, arrow and radio button styles

--- a/VUE-Amazing-Events/styles.css
+++ b/VUE-Amazing-Events/styles.css
@@ -29,6 +29,14 @@ h1, h2, h3, p {
   height: 4em;
 }
 
+.navbar-brand img{
+  width: 15rem;
+}
+
+.arrow-left {
+  transform: rotate(180deg);
+}
+
 .bg-white {
   background-color: var(--background-light)!important;
 }
@@ -46,8 +54,13 @@ h1, h2, h3, p {
 }
 
 .btn-danger {
-  background-color: var(--primary)!important;
-  border-color: var(--primary)!important;
+  /* background-color: var(--primary)!important;
+  border-color: var(--primary)!important; */
+  background: rgb(217,74,141)!important;
+  background: -moz-linear-gradient(45deg, rgba(217,74,141,1) 0%, rgba(217,3,104,1) 50%, rgba(183,4,82,1) 100%)!important;
+  background: -webkit-linear-gradient(45deg, rgba(217,74,141,1) 0%, rgba(217,3,104,1) 50%, rgba(183,4,82,1) 100%)!important;
+  background: linear-gradient(45deg, rgba(217,74,141,1) 0%, rgba(217,3,104,1) 50%, rgba(183,4,82,1) 100%)!important;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d94a8d",endColorstr="#b70452",GradientType=1)!important;
 }
 
 .btn-outline-danger {
@@ -56,7 +69,7 @@ h1, h2, h3, p {
 
 .btn-danger:hover {
   background-color: var(--primary-dark)!important;
-  border-color: var(--primary-dark)!important;
+  border: 1px solid var(--background-light)!important;
 }
 
 .btn-outline-danger:hover {
@@ -82,17 +95,9 @@ h1, h2, h3, p {
 }
 
 #card-container .card, #details .card {
-  min-height: 25rem;
-  max-width: 20rem;
-}
-
-#details .card {
-  max-width: 25rem;
-  border: 5px solid var(--primary);
-}
-
-.card a {
-  box-shadow: -0.5rem 0.5rem 0.5rem 0.1rem rgb(217 3 104 / 50%);
+  border-radius: 1.5rem;
+  width: 19.5rem;
+  min-height: 18rem;
 }
 
 .card a:hover, #card-container .card:hover {
@@ -101,7 +106,7 @@ h1, h2, h3, p {
 }
 
 .card a:hover {
-  background-color: var(--primary)!important;
+  border: 1px solid var(--background-light)!important;
 }
 
 .card:hover img {
@@ -110,13 +115,22 @@ h1, h2, h3, p {
 }
 
 .card:hover {
-  border: 5px solid var(--primary);
+  border: 2px solid var(--primary);
 }
 
 .card-img-top {
-  height: 20vh;
+  height: 12rem;
   border: 1px solid var(--primary);
-  box-shadow: -0.5rem 0.5rem 0.5rem 0.2rem rgb(217 3 104 / 50%);
+  border-radius: 1.5rem;
+  box-shadow: 0 0rem 0.5rem 0.3rem rgb(217 3 104 / 50%);
+}
+
+.card-text-top{
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: white;
+  border-radius: 1.5rem;
 }
 
 .form-control:focus {
@@ -128,14 +142,66 @@ h1, h2, h3, p {
   color: var(--primary);
 }
 
+#details .card {
+  width: auto;
+  max-width: 25rem;
+  border: 5px solid var(--primary);
+  min-width: 20rem;
+  min-height: 21rem;
+}
+
 #details img {
   min-width: 100%;
   object-fit: cover;
-  aspect-ratio: 2/1;
+  height: 20rem;
 }
 
-@media (max-width : 786px) {
-  header nav {
-    width: 100%;
+#details .card-date {
+  position: absolute;
+  border-radius: 1.5rem;
+  bottom: -1rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.checkbox-button {
+  display: flex;
+  position: relative;
+  cursor: pointer;
+}
+
+.checkbox-button input {
+  appearance: none;
+  width: 4.5rem;
+  height: 2rem;
+  -webkit-appearance: none;
+  border-radius: 1.5rem;
+  border: 3px solid #FFF;
+  background: var(--background-light);
+  outline: 1px solid var(--primary-dark);
+  cursor: pointer;
+}
+
+.checkbox-button input:checked {
+  background: var(--primary);
+  color: white;
+}
+
+.checkbox-button input:checked ~ label {
+  background: var(--primary);
+  color: white;
+}
+
+.checkbox-button label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+@media (max-width : 500px) {
+  .navbar-brand img{
+    width: 12rem;
   }
 }
